styles/add-task.css
/* ... */
.date-picker__day--empty {
   background: transparent;
   cursor: default;
}

.date-picker__day--today {
   outline: 2px solid #29abe2;
   background: #e7f7fc;
}

.date-picker__day--today:hover {
   color: #2a3647;
   transition: all 100ms ease-in-out;
}

.date-picker__day--selected {
   color: #fff;
   background: #29abe2;
}

.date-picker__day--selected:hover {
   color: #2a3647;
   transition: all 100ms ease-in-out;
}

.date-picker__day--disabled {
   color: #d1d1d1;
   background: #f6f7f8;
   cursor: default;
}

.add-task__dividing-line {
   height: 424px;
}

.add-task__priority-field {
   display: flex;
   gap: 16px;
}

.add-task__priority-option {
   font-size: 20px;
   font-weight: 400;
   color: #000;
   width: 100%;
   min-width: 100px;
   padding: 16px 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex: 1;
   gap: 8px;
   border: none;
   border-radius: 10px;
   filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.1));
   background-color: #fff;
   cursor: pointer;
}

.add-task__priority-option:hover {
   filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
   transition: all 100ms ease-in-out;
}

.add-task__priority-option--active.add-task__priority-option--urgent {
   background-color: #ff3d00;
}

.add-task__priority-option--active.add-task__priority-option--medium {
   background-color: #ffa800;
}

.add-task__priority-option--active.add-task__priority-option--low {
   background-color: #7ae229;
}

.add-task__priority-option--active {
   font-size: 21px;
   font-weight: 700;
   color: #fff;
   filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0));
}

.add-task__priority-option--active:hover {
   filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0));
   transition: all 100ms ease-in-out;
}

.add-task__priority-icon {
      flex-shrink: 0;
   }

.add-task__priority-option--active .add-task__priority-icon--secondary {
   fill: #fff;
}

.add-task__select {
   font-size: 20px;
   font-weight: 400;
   position: relative;
   z-index: 2;
   padding: 12px 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border: 1px solid #d1d1d1;
   border-radius: 10px;
   background-color: #fff;
   cursor: pointer;
}

.add-task__select:hover {
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
   transition: all 100ms ease-in-out;
}

.add-task__select-input {
   font-size: 20px;
   font-weight: 400;
   color: #2a3647;
   padding: 0;
   margin: 0;
   flex: 1;
   border: none;
   background-color: transparent;
}

.add-task__select-input::placeholder {
   color: #2a3647;
}

.add-task__select-input:focus {
   outline: none;
}

.add-task__select:active {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
   transition: all 100ms ease-in-out;
}

.add-task__select-wrapper {
   position: relative;
}

.add-task__select-menu {
   position: absolute;
   top: calc(100% - 10px);
   right: 0;
   left: 0;
   z-index: 0;
   padding: 10px 0 0;
   margin: 0;
   display: flex;
   flex-direction: column;
   gap: 1px;
   border-top: none;
   border-radius: 0 0 10px 10px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   list-style: none;
   opacity: 0;
   pointer-events: none;
   transform: scaleY(0);
   transform-origin: top;
   transition: opacity 100ms ease-in-out, transform 100ms ease-in-out;
}

.add-task__select-wrapper .add-task__select--open ~ .add-task__select-menu {
   opacity: 1;
   pointer-events: auto;
   transform: scaleY(1);
}

.add-task__select-menu--assigned {
   z-index: 0;
   max-height: 294px;
   min-height: 294px;
   overflow-y: scroll;
   scrollbar-color: #2b3647 #fff;
   scrollbar-gutter: stable;
}


.add-task__select-menu--assigned::-webkit-scrollbar {
   width: 8px;
}

.add-task__select-menu--assigned::-webkit-scrollbar-track {
   background-color: #fff;
}

.add-task__select-menu--assigned::-webkit-scrollbar-thumb {
   border-radius: 4px;
   background-color: #2b3647;
}

.add-task__assigned-initials {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
}

.add-task__assigned-initial {
   font-size: 12px;
   font-weight: 700;
   color: #fff;
   width: 42px;
   height: 42px;
   display: flex;
   justify-content: center;
   align-items: center;
   border: 2px solid #fff;
   border-radius: 50%;
   background-color: #ff7a00;
   cursor: pointer;
}

.add-task__assigned-overflow {
   font-size: 12px;
   font-weight: 700;
   color: #2a3647;
   width: 42px;
   height: 42px;
   display: flex;
   justify-content: center;
   align-items: center;
   border: 2px solid #2a3647;
   border-radius: 50%;
   background-color: transparent;
   cursor: pointer;
}

.add-task__selection-group--category-open .add-task__input-group--subtasks {
   position: relative;
   transform: translateY(90px);
}

.add-task__information-group--selection.add-task__selection-group--assigned-open
   .add-task__selection-group {
   position: relative;
   transform: translateY(294px);
}

.add-task__select-option {
   font-size: 20px;
   padding: 12px 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 10px;
   cursor: pointer;
   transition: all 100ms ease-in-out;
}

.add-task__select-option--assigned {
   padding: 7px 16px;
}

.add-task__select-option:hover {
   background-color: #eee;
   transition: all 100ms ease-in-out;
}

.add-task__select-option:active {
   background-color: #d1d1d1;
   transition: all 100ms ease-in-out;
}

.add-task__select-option--selected {
   color: #fff;
   background-color: #2a3647;
}

.add-task__select-option--selected:hover {
   background-color: #091931;
}

.add-task__option-content {
   display: flex;
   align-items: center;
   gap: 16px;
}

.add-task__option-initials {
   font-size: 12px;
   font-weight: 700;
   color: #fff;
   width: 42px;
   height: 42px;
   display: flex;
   justify-content: center;
   align-items: center;
   border: 2px solid #fff;
   border-radius: 50%;
   background-color: #ff7a00;
}
/* ... */

